# StartupValueSimulator

./: .gitignore  Cargo.toml  QUICKSTART.md  README.md  build.bat  build.ps1  demo.html  demo.md  interactive_demo.html  test_rust.rs
src/: app.rs  lib.rs  main.rs  models.rs  utils.rs
src/components/: cap_table.rs  exit_scenarios.rs  founder_setup.rs  funding_rounds.rs  mod.rs  ownership_chart.rs
